clusters/cluster0/kubernetes/apps/media/epub-only/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: epub-only
  labels:
    app.kubernetes.io/name: epub-only
