clusters/cluster0/kubernetes/apps/media/epub-only/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: epub-only-service
  namespace: media
  labels:
    app.kubernetes.io/name: epub-only
spec:
  type: ClusterIP
  selector:
    app: epub-only
  ports:
    - name: epub-only
      protocol: TCP
      port: 8080
      targetPort: 8080
