clusters/cluster0/kubernetes/apps/media/epub-only/app/epub-only-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: epub-only
  namespace: epub-only
spec:
  hostnames:
    - epub-only.gregbob.net
  parentRefs:
    - name: wildcard-gregbob-net
      namespace: networking
  rules:
    - backendRefs:
        - name: epub-only
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
